source/stylesheets/home.sass
.home-hero
  display: grid
  position: relative
  place-items: center
  align-items: center
  justify-content: center
  align-content: center
  grid-template-columns: 1fr
  grid-template-rows: 1fr
  margin-bottom: var(--margin-size)
  overflow: hidden

  > *
    grid-area: 1/1

  &--no-image
    min-height: 600px
    padding: 48px 0

  &--full-page
    height: 600px
    width: 100%

    .home-hero-image
      height: 100%
      object-fit: cover

    .home-hero-content
      max-width: 100%

  &--constrained
    border-radius: var(--border-radius)

    @media screen and (max-width: $break-small)
      border-radius: 0

    .home-hero-content, .home-hero-overlay, .home-hero-image
      border-radius: var(--border-radius)

  @media screen and (max-width: $break-small)
    min-height: auto
    height: auto
    margin-top: 16px
    margin-bottom: 48px

.home-hero-image
  object-fit: contain
  width: 100%

  @media screen and (max-width: $break-small)
    object-fit: cover
    height: 100%

.home-hero-overlay
  background-color: var(--hero-overlay-color)
  content: ""
  height: 100%
  position: relative
  width: 100%
  z-index: 2
  opacity: #{"{{ theme.hero_overlay_opacity }}"}
  pointer-events: none

.home-hero-content
  color: var(--hero-text-color)
  position: relative
  display: flex
  align-items: center
  justify-content: center
  height: 100%
  width: 100%
  flex-direction: column
  gap: 40px
  padding: 48px
  max-width: 1200px
  margin: 0 auto
  top: 0
  z-index: 3

.home-hero-text
  font-size: 2rem
  font-weight: 700
  text-align: center
  max-width: calc(1080px + calc(var(--side-padding) * 2))

.home-hero-button
  border: 2px solid var(--hero-text-color)
  border-radius: var(--border-radius-sm)
  color: var(--hero-text-color)
  display: flex
  width: 274px
  min-height: 56px
  align-items: center
  justify-content: center
  font-weight: 700
  text-align: center
  padding: 16px

  &:hover, &:focus
    background-color: var(--hero-text-color)
    color: var(--hero-overlay-color)
    text-decoration: none

.home-featured-products
  margin-bottom: var(--margin-size)

a.all-products-button
  margin-top: 48px
  min-width: 200px
  max-width: 50%

.featured-categories

  h2
    text-align: center
    margin-bottom: 48px
    font-weight: 600
    font-size: 2rem

    @media screen and (max-width: $break-small)
      font-size: 1.75rem

  .category-list
    --columns: #{"{{ theme.max_categories_per_row }}"}

    &--text 
      gap: 20px
      --columns: 1

      .button
        display: block
        max-width: 300px
        white-space: nowrap
        overflow: hidden
        text-overflow: ellipsis
        text-align: center
        margin: 0

        @media screen and (max-width: $break-small)
          max-width: 80%
          min-width: 200px

